# rixi

./: .gitignore  Cargo.toml  LICENSE  README.md  manifest.toml
.github/: rixi-v0.2.md
bspwm/: bspwmrc
kitty/: kitty.conf
picom/: picom.conf
src/: cli.rs  deps.rs  distro.rs  errors.rs  lib.rs  main.rs  manifest.rs  paths.rs  registry.rs  shell.rs  snapshot.rs  state.rs  wallpaper.rs
src/commands/: apply.rs  init.rs  list.rs  mod.rs  pull.rs  push.rs  rollback.rs
