[package]
name = "rixi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
colored = "3"
thiserror = "2"
whoami = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
